@@ -88,6 +88,7 @@ jobs:
           letodbf-server-alcz \
           letodbf-rdd-elch \
           letodbf-rdd-alcz \
+          harbour-crypto \
           harbour-yaml \
           libpq-inherit \
           harbour-pgsql \
