@@ -87,6 +87,7 @@ jobs:
           letodbf-rdd-elch \
           letodbf-rdd-alcz \
           harbour-yaml \
+          harbour-crypto \
           libpq9 \
           harbour-pgsql \
           zlib \
